# system60_modbus_logger

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
src/system60_modbus_logger/: __main__.py
