[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "system60_modbus_logger"
authors = [
  { name = "Killian Murphy", email = "killian.murphy@york.ac.uk" },
]
description = "A logging program to capture gas sensor data across all racks in the System60 lab"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS ::MacOS X",
  "Operating System :: POSIX :: Linux",
]
dependencies = [ "minimalmodbus", ]
dynamic = [ "version" ]

[project.optional-dependencies]

[project.scripts]

[project.urls]
Homepage = "https://github.com/Chong-Lab-UoY/system60_modbus_logger"
Issues = "https://github.com/Chong-Lab-UoY/system60_modbus_logger/issues"

[tool.setuptools_scm]
